Align and simplify timeouts in integration tests